♻️ refactor: capturepoint 양방향 관계를 위한 편의 메서드 사용